# The_Oracle_TTS

./: .gitignore  LICENSE  NEXT_CODEX_PROMPT.txt  README.md  bootstrap_chatterbox_only.sh  bootstrap_oracle_tts.sh  doctor_oracle_tts.sh  install_oracle_tts.sh  push_oracle_update.sh  pyproject.toml  run_oracle_tts.sh  uninstall_oracle_tts.sh
Input/: README.md  Read Aloud transcript.txt  What is, reality?.txt  cli_short.txt  test.txt
Input/test/: render_plan.json  test.flac
Output/: .gitkeep  What is, reality? (1).flac  What is, reality? (2).flac  What is, reality?.flac  render_plan.json  test (1).flac  test (2).flac  test (3).flac  test (4).flac  test.flac
Output/cli-render/: cli_short.flac  render_plan.json
Output/logs/: corrections.diff  corrections.json  render_timings.json
Output/manual_test/: render_plan.json  test (2).flac  test.flac
Profiles/: .gitkeep
release_artifacts/: .gitkeep
scripts/: doctor.py  download_models.py  gui_smoke_prewarm.py  real_engine_smoke.py  smoke_render.py
tests/: helpers.py  test_app_gui_profiles.py  test_app_gui_progress.py  test_app_paths.py  test_chatterbox_engine.py  test_chunking.py  test_correction_modes.py  test_device_support.py  test_emotion_controls.py  test_emotion_selector.py  test_export_flac.py  test_gui_settings.py  test_project_manifest.py  test_render_plan.py  test_render_worker_integration.py  test_smoke_render.py  test_speaker_attribution.py  test_synthesis_task.py  test_text_ingest.py  test_text_normalization.py  test_voice_catalog.py  test_wpm_controls.py
user_settings/: .gitkeep  settings list.json
(+87 files in other folders)
